--- a/Styles/Portfolio_Navbar.css
+++ b/Styles/Portfolio_Navbar.css
@@ -26,7 +26,7 @@ ul.NavBar li a img {
 	padding-right: 10px;
 }
 ul.NavBar li a:hover {
-	background-color: #000066;
+	background-color: #0000cc;
 }
 ul.NavBar li.Icon {
 	display: none;
