--- a/Styles/Portfolio_Projects.css
+++ b/Styles/Portfolio_Projects.css
@@ -8,10 +8,16 @@ div.ProjectGrid {
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
+a.GridLink {
+	color: white;
+	text-decoration: none;
+}
+
 div.GridItem {
 	width: 250px;
 	height: 250px;
 	display: grid;
+	overflow: hidden;
 	position: relative;
 	border-style: solid;
 	border-color: white;
@@ -19,17 +25,21 @@ div.GridItem {
 	background-color: #1a1a1a;
 }
 div.GridItem img {
-	width: 250px;
+	width: 100%;
 	height: auto;
+	display: block;
+	transition: opacity 0.5s ease;
 }
 div.GridItem div.PictureOverlay {
 	bottom: 0;
+	opacity: 1;
 	height: 20%;
 	width: 100%;
 	display: flex;
 	position: absolute;
 	align-items: center;
     justify-content: center;
+	transition: opacity 0.5s ease;
 	border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 	background-color: rgba(0, 0, 204, 0.4);
@@ -37,4 +47,28 @@ div.GridItem div.PictureOverlay {
 div.GridItem div.PictureOverlay p {
     font-size: 20px;
     font-weight: bold;
+	text-align: center;
+}
+
+div.GridItem div.ProjectDescription {
+	opacity: 0;
+	display: flex;
+	position: absolute;
+	padding-left: 20px;
+	padding-right: 20px;
+	box-sizing: border-box;
+	transition: opacity 0.5s ease;
+}
+
+/* Hover Function */
+div.GridItem:hover img {
+	opacity: 0;
+}
+
+div.GridItem:hover div.PictureOverlay {
+	opacity: 0;
+}
+
+div.GridItem:hover div.ProjectDescription {
+	opacity: 1;
 }
