--- a/Styles/Portfolio_Layout.css
+++ b/Styles/Portfolio_Layout.css
@@ -69,7 +69,11 @@ ul.NavBar .RightMenu {
 		width: 44px;
 		height: 44px;
 		display: flex;
+		z-index: 1000;
+		cursor: pointer;
 		position: absolute;
+		align-items: center;
+        justify-content: center;
 	}
 	ul.NavBar .RightMenu {
 		left: 0;
@@ -98,6 +102,10 @@ ul.NavBar .RightMenu {
 }
 
 /* Portfolio Content Layout */
+div.ScrollMargin {
+	scroll-margin-top: 60px;
+}
+
 div.PortfolioContent {
 	background-color: #333333;
 }
